# cmonitor

./: .clang-format  .gitignore  .travis.yml  Constants.mk  Dockerfile  Makefile  Prometheus-Support.mk  README.md  TODO.md  conanfile.txt  docker-userapp.json  makefile  renovate.json
.copr/: Makefile
collector/: Makefile
debian/: changelog  cmonitor-collector.install  cmonitor-tools.install  control  files  rules
docker/: DockerHOWTO.md  Dockerfile  Dockerfile.alpine-wip
examples/: Makefile  baremetal1.err  baremetal1.html  baremetal1.json  baremetal1_20190413_1605.html  baremetal1_20190413_1605.json  baremetal2.html  cmonitor-tools-2.3.0-0.x86_64.rpm  cmonitor-tools-2.3.0-0.x86_64.rpm.1  cmonitor-tools-2.3.0-0.x86_64.rpm.2  docker-stress-test-cpu.html  (+23 more)
tools/: .gitignore  Makefile  setup.cfg  setup.py
tools/.copr/: Makefile
tools/chart/: Makefile  cmonitor_chart.py  cmonitor_chart.py.j2
tools/common-code/: cmonitor_chart_engine.py  cmonitor_filter_engine.py  cmonitor_launcher.py  cmonitor_loader.py  cmonitor_statistics_engine.py  cmonitor_version.py.j2  cmonitor_watcher.py
tools/filter/: Makefile  cmonitor_filter.py  cmonitor_filter.py.j2
tools/filter/tests/: docker-collecting-docker-stats.json  test_filter_by_task_name.py  test_filter_by_time.py
tools/launcher/: Makefile  cmonitor_launcher.py
tools/launcher/tests/: dummy.py  test_cgroup_watcher.py
tools/spec/: tools.spec
tools/statistics/: Makefile  cmonitor_statistics.py  cmonitor_statistics.py.j2
tools/statistics/tests/: docker-collecting-docker-stats.json  test_stats.py  toosmall.json
(+152 files in other folders)
